@@ -3,6 +3,7 @@ package io.ssafy.mallook.domain.product.dao.mongo;
 import io.ssafy.mallook.domain.product.dto.request.ProductHotKeywordDto;
 import io.ssafy.mallook.domain.product.dto.response.ProductsDetailDto;
 import io.ssafy.mallook.domain.product.dto.response.ProductsListDto;
+import io.ssafy.mallook.domain.product.dto.response.ProductsPageRes;
 import io.ssafy.mallook.domain.product.entity.Products;
 import io.ssafy.mallook.domain.product.entity.ReviewObject;
 import io.ssafy.mallook.domain.product.entity.Reviews;
@@ -20,6 +21,7 @@ import org.springframework.stereotype.Repository;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
 import static org.springframework.data.mongodb.core.aggregation.Aggregation.newAggregation;
@@ -29,10 +31,10 @@ import static org.springframework.data.mongodb.core.aggregation.Aggregation.newA
 public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
 
     private final MongoTemplate mongoTemplate;
-    private final String COLLECTION_NAME = "hiver";
+    private final String COLLECTION_NAME = "products";
 
     @Override
-    public Slice<ProductsListDto> getProductsListByCategory(ObjectId cursor, Pageable pageable, String mainCategory, String subCategory) {
+    public ProductsPageRes getProductsListByCategory(ObjectId cursor, Pageable pageable, String mainCategory, String subCategory) {
         Query query = new Query().addCriteria(Criteria.where("id").lt(cursor))
                 .with(pageable);
 
@@ -46,14 +48,19 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
         List<ProductsListDto> productsList = mongoTemplate.find(query, Products.class)
                 .stream()
                 .map(ProductsListDto::toDto)
-                .toList();
-
-        boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber() + 1) * pageable.getPageSize());
-        return new SliceImpl<>(productsList, pageable, hasNext);
+                .collect(Collectors.toList());
+        boolean hasNext = mongoTemplate.count(query, Products.class) >= pageable.getPageSize();
+        System.out.println(productsList.size());
+        var nextCursor = hasNext ? productsList.get(productsList.size() - 1).id() : null;
+        productsList.remove(productsList.size() - 1);
+        return ProductsPageRes.builder()
+                .content(productsList)
+                .nextCursor(nextCursor)
+                .build();
     }
 
     @Override
-    public Slice<ProductsListDto> findByProductName(String name, String cursor, Pageable pageable) {
+    public ProductsPageRes findByProductName(String name, String cursor, Pageable pageable) {
         Query query = new Query().addCriteria(Criteria.where("name").regex(name, "i"));
 
         if (!isNull(cursor) && !cursor.isEmpty()) {
@@ -65,14 +72,17 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
                 .map(ProductsListDto::toDto)
                 .toList();
         boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber() + 1) * pageable.getPageSize());
-
-        return new SliceImpl<>(productsList, pageable, hasNext);
+        var nextCursor = hasNext ? productsList.get(productsList.size() - 1).id() : null;
+        productsList.remove(productsList.size() - 1);
+        return ProductsPageRes.builder()
+                .content(productsList)
+                .nextCursor(nextCursor)
+                .build();
     }
 
     @Override
-    public Slice<ProductsListDto> findByKeywordList(ProductHotKeywordDto hotKeywordDto, String cursor, Pageable pageable) {
-        List<String> keywords = hotKeywordDto.hotKeywordList();
-        Query query = new Query().addCriteria(Criteria.where("keywords").in(keywords));
+    public ProductsPageRes findByKeywordList(List<String> keywords, String cursor, Pageable pageable) {
+        Query query = new Query().addCriteria(Criteria.where("keywords").in(keywords)).with(pageable);
 
         if (!isNull(cursor) && !cursor.isEmpty()) {
             query.addCriteria(Criteria.where("id").lt(new ObjectId(cursor)));
@@ -81,10 +91,23 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
         List<ProductsListDto> productsList = mongoTemplate.find(query, Products.class)
                 .stream()
                 .map(ProductsListDto::toDto)
-                .toList();
-        boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber() + 1) * pageable.getPageSize());
+                .collect(Collectors.toList());
 
-        return new SliceImpl<>(productsList, pageable, hasNext);
+        if (productsList.isEmpty()) {
+            return ProductsPageRes.builder()
+                    .content(List.of())
+                    .nextCursor(null)
+                    .build();
+        }
+
+        boolean hasNext = mongoTemplate.count(query, Products.class) > ((pageable.getPageNumber() + 1) * pageable.getPageSize());
+        var nextCursor = hasNext ? productsList.get(productsList.size() - 1).id() : null;
+        productsList.remove(productsList.size() - 1);
+
+        return ProductsPageRes.builder()
+                .content(productsList)
+                .nextCursor(nextCursor)
+                .build();
     }
 
     @Override
@@ -109,16 +132,17 @@ public class ProductsCustomRepositoryImpl implements ProductsCustomRepository {
         AggregationOperation sliceOperation = Aggregation.project()
                 .and("reviews.count").as("reviews.count")
                 .and("reviews.average_point").as("reviews.average_point")
-                .and("reviews.reviews").slice(pageable.getPageSize(), (int) (pageable.getOffset())).as("reviews.reviews");
+                .and("reviews.reviews").slice(pageable.getPageSize(), (int) (pageable.getOffset()))
+                .as("reviews.reviews");
         TypedAggregation<Products> aggregation = newAggregation(Products.class, matchOperation, sliceOperation);
         AggregationResults<Products> result = mongoTemplate.aggregate(aggregation, COLLECTION_NAME, Products.class);
-        Reviews reviews = Objects.requireNonNull(result.getUniqueMappedResult()).getReviews();
-        return new PageImpl<>(reviews.getReviews(), pageable, reviews.getCount());
+        Reviews reviews = Objects.requireNonNull(result.getUniqueMappedResult()).getReview();
+        return new PageImpl<>(reviews.getReviewList(), pageable, reviews.getCount());
     }
 
     @Override
     public Page<ProductsListDto> getProductsWithManyReviews(int page, int size) {
-        page = page > 9 ? 9 : Math.max(page, 0) ;
+        page = page > 9 ? 9 : Math.max(page, 0);
         Long maxProducts = 100L;
         Pageable pageable = PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "reviews.count"));
         Query query = new Query().with(pageable);
